Avoid reporting space as NBSP in TextInputState.

This removes a fix done at the top level Android layer and moves it into
TextIterator.  Because the text is stored away in intermediate caches
(mLastText, mCachedTextInputState), it seems more principled to do it at
emission time to avoid potential cache mismatch issues.  This change also
avoids allocating a new Java String for every update.

BUG=663880

Review-Url: https://codereview.chromium.org/2649923012
Cr-Commit-Position: refs/heads/master@{#445972}

Former-commit-id: 34f2476fb5c0fab47e6d0b99d18b99a1b6fce7be